--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,17 @@ font-family: Roboto;
   
 }
 
+body, html {
+  height: 100%;
+}
+
+.booking-image {
+  background-image: url(./../public/images/bookingPic.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 150vh;
+}
+
 .container-custom {
   position: relative;
   text-align: center;
