--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,8 @@ body, html {
   height: 100%;
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
+  max-width: 1366px;
+  min-width: 340px;
 }
 
 .nameStyle{
